--- a/src/components/molecules/MusicList/index.css
+++ b/src/components/molecules/MusicList/index.css
@@ -10,15 +10,52 @@
 .modal-body::-webkit-scrollbar{
     display: none;
 }
-/* 
+
 .musiclist-table {
     overflow: hidden;
-} */
+}
+
+.table-rows {
+    transition: transform .25s cubic-bezier(.7,.98,.86,.98), box-shadow .25s cubic-bezier(.7,.98,.86,.98);
+    box-shadow: 0 5px 7px -1px rgba(51, 51, 51, 0.23);
+}
+.table-rows:hover {
+    transform: scale(1.02);
+    box-shadow: 0 9px 47px 11px rgba(51, 51, 51, 0.18);
+}
+.song-image {
+    width: 60px;
+    height: 60px;
+}
+.td-hz-align{
+    vertical-align: middle;
+}
+
+.artist-image-div {
+    width: 80px;
+    height: 60px;
+    background-size: cover;
+    background-position: center;
+    word-wrap: break-word;
+    font-size: 80%;
+    text-align: center;
+    color: white;
+    margin: auto;
+}
+
+#align-start {
+    text-align: start;
+}
+
+#horizontal-align {
+    display: flex;
+    align-items: center;
+}
 
 #score-select {
     background-color: transparent;
     color: black;
-    width: 40%;
+    width: 100%;
     text-align: center;
     border: none;
     appearance: none;
