--- a/src/components/molecules/Container/PageContainer/Artist/artist.css
+++ b/src/components/molecules/Container/PageContainer/Artist/artist.css
@@ -83,13 +83,22 @@
 }
 
 .artist-description-row {
-    padding: 700px 0 20px 0;
+    padding: 656px 0 20px 0;
 }
 
-/* .row-revealUp {
-    opacity: 0;
-    visibility: hidden;
-} */
+.carousel {
+    /* background-color: black; */
+    width: 100%;
+}
+#carousel-item {
+    width: 80%;
+    margin-left: 10%;
+}
+
+.row-revealUp {
+   /* background-color: blue; */
+   margin: 0 auto;
+}
 /* .artist-header-row-col {
     background-color: gold;
     text-align: center;
