update to new song page

--- a/src/components/atoms/Icons/Icons.css
+++ b/src/components/atoms/Icons/Icons.css
@@ -11,6 +11,10 @@
     animation-fill-mode: backwards;
 }
 
+.bi.bi-check2-circle {
+    color: white;
+}
+
 @keyframes displaceClose {
     from { transform: translateX(1em);}
     to { 
