--- a/src/components/molecules/MusicList/index.css
+++ b/src/components/molecules/MusicList/index.css
@@ -15,6 +15,22 @@
     overflow: hidden;
 }
 
+.edit:hover {
+    cursor: pointer;
+    color: gold;
+}
+
+.remove-btn {
+    width: 50%;
+    text-align: center;
+    margin: 0 auto;
+    background-color: transparent !important;
+    color: black !important;
+    border: none !important;
+} .remove-btn:hover {
+    background-color: lightgray !important;
+}
+
 .table-rows {
     transition: transform .25s cubic-bezier(.7,.98,.86,.98), box-shadow .25s cubic-bezier(.7,.98,.86,.98);
     box-shadow: 0 5px 7px -1px rgba(51, 51, 51, 0.23);
