added embedded songs from YT and Spotify

--- a/src/components/molecules/Container/PageContainer/Song/new design/newSong.css
+++ b/src/components/molecules/Container/PageContainer/Song/new design/newSong.css
@@ -32,6 +32,12 @@
     transition-timing-function: ease-in;
 }
 
+.embedded {
+    margin: 1% auto;
+    height: 100%;
+    width: 50%;
+}
+
 
 #reveal-first {
     animation-name: FadeIn;
