--- a/src/components/organisms/NavBar/index.css
+++ b/src/components/organisms/NavBar/index.css
@@ -1,12 +1,6 @@
 .navBar {
-    height: 10vh;
     width: 100%;
-}
-
-.navbar-container{
-    height: 10vh;
-    background-color: black;
-    /* position: fixed; */
+    background-color: black !important;
 }
 
 .navbar-container-row{
@@ -27,26 +21,11 @@
     height: 100%;
 }
 
-#col-1 {
-    text-align: end;
+#menu-items-row {
+    width: 100%;
 }
-#col-3 {
+#start {
     text-align: start;
-}
-
-.searchbar {
-    position: relative;
-    height: 4vh;
-    margin-right: 1vw;
-    border-radius: 30px !important;
-
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-
-    animation-name: FadeIn;
-    animation-duration: 3s;
-    transition-timing-function: ease-in;
 }
 
 @keyframes FadeIn {
