--- a/src/components/molecules/Container/PageContainer/Artist/artist.css
+++ b/src/components/molecules/Container/PageContainer/Artist/artist.css
@@ -86,24 +86,28 @@ html::-webkit-scrollbar{
 .artist-description-row {
     /* padding: 670px 0 20px 0; */
     padding: 20px 0 20px 0;
+    display: flex;
+    justify-content: center;
 }
 
 .carousel {
-    /* background-color: black; */
-    width: 100%;
+    height: 100%;
+    overflow: auto;
 }
 
-.flex {
+.space-evenly {
     display: flex;
     justify-content: space-evenly;
 }
 
+#flex {
+    display: flex;
+    justify-content: center;
+}
+
 .songsList-btn {
-    position: relative;
-    display: block;
-    width: 100%;
+    width: 75% !important;
     height: 20%;
-    margin-right: 0px;
 }
 /* .artist-header-row-col {
     background-color: gold;
