--- a/src/components/molecules/Search/OffCanvas/index.css
+++ b/src/components/molecules/Search/OffCanvas/index.css
@@ -1,5 +1,5 @@
 #offcanvas {
-    height: 30%;
+    height: 20%;
 }
 
 /* .search-canvas-body {
@@ -17,6 +17,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: visible !important;
 }
 .search-dropdown {
     position: relative;
