--- a/src/components/molecules/Container/HomeContainer/index.css
+++ b/src/components/molecules/Container/HomeContainer/index.css
@@ -32,16 +32,23 @@
 }
 
 .image-div-container {
-    position: absolute;
-    height: 60%;
-    /* display: flex;
+    position: inherit;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    display: flex;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
     filter: blur(8px);
 }
 .image-div {
     position: relative;
+    margin: 0 auto;
+    margin-top: 8%;
     text-align: center;
     display: flex;
     justify-content: center;
+    height: 50vh;
+    width: 75%;
+    /* background-color: blue; */
 }
