--- a/src/components/molecules/Container/HomeContainer/index.css
+++ b/src/components/molecules/Container/HomeContainer/index.css
@@ -1,54 +1,61 @@
 
-.home-container-row {
-    height: 10%;
-    /* position: relative; */
-} 
-
-.home-row-col {
-    /* background-color: red; */
-    color: black;
-    font-size: 40px;
-    overflow-y: auto;     
-}
-
-.home-container-row-2 {
-    height: 90%;
-}
-
-.numberOne-div{
-    background-color: black;
-    margin: auto;
-    margin-top: 3%;
-    height: 60vh;
-    width: 75%;
-    border-radius: 200px;
-    text-align: center;
-    color: white;
-    font-size: 55px;
-}
-
 #test{
     background-color: red;
 }
 
-.image-div-container {
-    position: inherit;
+body{
     height: 100%;
+}
+.home-container {
+    /* background-color: red; */
+    position: absolute;
+    height: 90%;
+    background-color: rgb(248,248,248);
+}
+
+.background-div-container {
+    position: inherit;
+    height: 70%;
     width: 100%;
     left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    filter: blur(8px);
 }
+
+.backgroundFilter-div {
+    height: 100%;
+    min-width: 100%;
+    backdrop-filter: blur(10px);
+}
+
 .image-div {
     position: relative;
-    margin: 0 auto;
+    margin: auto;
     margin-top: 8%;
-    text-align: center;
     display: flex;
     justify-content: center;
     height: 50vh;
-    width: 75%;
     /* background-color: blue; */
 }
+
+.home-info-div {
+    /* background-color: yellow; */
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 1.5%;
+    /* background-color: red; */
+}
+
+.main-info-div {
+    height: 20vh;
+    /* text-align: center; */
+}
+
+#info-div {
+    border: 1px solid rgb(240,240,240);
+    border-top-right-radius: 10px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    width: 20%;
+ }
+
+ .video-div {
+    transform: translateY(-20%);
+ }
