--- a/src/components/molecules/Container/HomeContainer/index.css
+++ b/src/components/molecules/Container/HomeContainer/index.css
@@ -11,6 +11,7 @@ body{
     position: absolute;
     height: 90%;
     background-color: rgb(248,248,248);
+    overflow: hidden;
 }
 
 .background-div-container {
@@ -40,7 +41,7 @@ body{
     /* background-color: yellow; */
     display: flex;
     justify-content: space-evenly;
-    margin-top: 1.5%;
+    margin-top: 1%;
     /* background-color: red; */
 }
 
@@ -57,5 +58,5 @@ body{
  }
 
  .video-div {
-    transform: translateY(-20%);
+    transform: translateY(-15%);
  }
